--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.6"
+    "sequelize": "^5.21.6",
+    "slugify": "^1.4.0"
   },
   "devDependencies": {},
   "scripts": {
